fix channel title carousel overflow, fix horizontal scroll in watch Comp

--- a/src/components/Channel/Channel.module.css
+++ b/src/components/Channel/Channel.module.css
@@ -69,15 +69,14 @@
 .channelTabbedHeader {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  /* justify-content: center; */
   padding: 15px 15px 0;
   margin: 0 auto;
-  width: 100%;
+  /* width: 100%; */
   position: relative;
   overflow: hidden;
   scroll-behavior: smooth;
 }
-
 .channelTabbedItem {
   position: relative;
   color: gray;
